@@ -1,5 +1,9 @@
 2013-10-04  Alan Modra  <amodra@gmail.com>
 
+	* string/tester.c (test_memrchr): Increment reported test cycle.
+
+2013-10-04  Alan Modra  <amodra@gmail.com>
+
 	* string/test-memcpy.c (do_one_test): When reporting errors, print
 	string address and don't overrun end of string.
 
